# Todo-web-app-rust

./: .gitignore
actix-api/: Cargo.toml  app.db  app.db-shm  app.db-wal
actix-api/migrations/: 20230528014627_init.sql  20230528193848_add_task_table.sql  20230529175508_add_task_dates.sql
actix-api/src/: main.rs
actix-api/src/config/: config.rs
actix-api/src/database/: db_client.rs  mod.rs
actix-api/src/handlers/: task.rs  user.rs
actix-api/src/model/: mod.rs
actix-api/src/model/db/: task.rs  user.rs
actix-api/src/model/request/: create_user_request.rs  mod.rs  task_update_request.rs
actix-api/src/service/: db_repo.rs  mod.rs  task_service.rs
model/: Cargo.toml
model/src/: lib.rs
model/src/db/: task.rs  user.rs
model/src/request/: create_task_request.rs  login_request.rs  mod.rs  update_task_request.rs
model/src/response/: login.rs  mod.rs  task.rs  user.rs
web-app-leptos/: Cargo.toml  index.html  styles.css
web-app-leptos/src/: main.rs
web-app-leptos/src/components/: footer.rs  list.rs  login.rs  mod.rs  navbar.rs
web-app-yew/: Cargo.toml  index.html  styles.css
web-app-yew/src/: main.rs
web-app-yew/src/components/: header.rs  list.rs  login.rs  mod.rs
web-app-yew/src/model/db/: task.rs  user.rs
web-app-yew/src/model/request/: task_create_request.rs  task_delete_request.rs
