[package]
name = "actix-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
mongodb = "2.4.0"
r2d2 = "0.8.10"
serde = "1.0.154"
futures = "0.3"
env_logger = "0.10.0"
rust-argon2 = "1.0"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

# [profile.release]
# opt-level = "z"     # Optimize for size.
# lto = true          # Enable Link Time Optimization
# codegen-units = 1   # Reduce number of codegen units to increase optimizations.
# panic = "abort"     # Abort on panic
# strip = true        # Automatically strip symbols from the binary.
