[package]
name = "web-app-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen-futures = "0.4.34"
reqwasm = "0.5"
serde_json = "1.0.94"
serde = {version = "1.0.155", features = ["derive"]}
serde-wasm-bindgen = "0.5.0"
wasm-logger = "0.2.0"
log = "0.4.17"
web-sys = "0.3.61"
wasm-bindgen = "0.2.84"
gloo-net = "0.2.6"
